Screen 2 & Screen Transition (Images as well) - Kevin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TriviaApp">
         <activity
+            android:name=".GameScreen"
+            android:label="@string/title_activity_game_screen"
+            android:theme="@style/Theme.TriviaApp.NoActionBar"></activity>
+        <activity
             android:name=".EndScreen"
             android:label="@string/title_activity_end_screen"
-            android:theme="@style/Theme.TriviaApp.NoActionBar"></activity>
+            android:theme="@style/Theme.TriviaApp.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
