--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TriviaApp">
+        <activity android:name=".AboutPage"></activity>
         <activity
             android:name=".EndScreen"
             android:label="@string/title_activity_end_screen"
-            android:theme="@style/Theme.TriviaApp"/>
+            android:theme="@style/Theme.TriviaApp" />
         <activity
             android:name=".GameScreen"
             android:label="GameScreen"
@@ -20,7 +21,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
