--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TriviaApp">
         <activity android:name=".AboutPage"
-            android:label="AboutPge"
+            android:label="AboutPage"
             android:theme="@style/Theme.TriviaApp"
             android:parentActivityName=".MainActivity">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
